# LISA

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  setupSteps.txt
models/: ae_predictor_epoch_150_R2_0.5951396226882935_runID_cd7605a0.pth  configs.pkl  images.pkl  weight_images.pkl  yoloModel_wandb_5l8pg9sf_map50old_0.5658.pt  yoloModel_wandb_vb5075nk_map50_0.7878.pt  yoloModel_wandb_wy3k2hnb_testRecall_0.7588.pt
relevantInformation/: main.bib  main.tex
scripts/: download_models.sh  download_sample_data.sh  run_demo.sh
src/: pipeline.py  utilities.py
src/.ipynb_checkpoints/: utilities-checkpoint.py
src/lisa/: __init__.py  assets.py  cli.py  config.py  inference.py  legacy_models.py  runner.py  visualization.py
